feat: Step 2 – Experiment tracking (MLflow integration)
- Tilføjet MLflow til requirements.txt og opsat .gitignore til logs og artefakter
- Implementeret MLflow-logging i models/train_pytorch.py (parametre, metrics, model, artefakter)
- Tilføjet utils/mlflow_utils.py for professionel logging af artefakter og run management
- Forberedt pipeline til at understøtte flere modeltyper med MLflow tracking
- Opdateret projektstruktur og dokumentation for reproducérbar ML-udvikling
- Testet at alle runs, parametre, metrics og artefakter kan ses i MLflow UI (localhost:5001)
- Klar til videreudvikling af eksperiment tracking og model management

#ai_trading #mlops #mlflow #experiment_tracking #pytorch #tensorboard #ready

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# === Virtuel Python-miljø ===
+# === Virtuelt Python-miljø ===
 .venv/
 venv/
 ENV/
@@ -46,6 +46,7 @@ models/*
 *.h5
 *.keras
 *.pth
+*.pt
 *.pkl
 *.npz
 *.joblib
@@ -61,8 +62,17 @@ trades/
 .env
 .env.*
 secrets/
-config/*.json       # <-- VIGTIG: Ignorerer alle JSON config, inkl. Google API secrets!
-config/client_secret_*.json  # <-- EKSTRA SIKKERHED: ALDRIG committe dine Google-secrets!
+config/*.json
+config/client_secret_*.json
+
+# === MLflow, TensorBoard og eksperiment artefakter ===
+mlruns/
+mlruns.*
+runs/
+runs.*
+tensorboard/
+*.tensorboard
+*.event*
 
 # === VS Code, PyCharm, OS-filer ===
 .vscode/
@@ -127,3 +137,14 @@ desktop.ini
 
 # === Pyright type-checking artefakter ===
 typings/
+
+# === Diverse midlertidige, cache og ekstra eksperiment-artefakter ===
+*.tmp
+*.temp
+.cache/
+.cache/*
+.experiment/
+.DS_Store
+*.bak
+*.swp
+*.swo
