--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ joblib==1.4.2
 # Trading & API
 python-binance==1.0.29
 ccxt==4.4.86
-python-telegram-bot==13.15
+python-telegram-bot==20.7       # Opdateret! (kræver evt. tilpasning af telegram-kode)
 requests==2.32.3
 
 # Scheduling, env, optimering
@@ -36,9 +36,9 @@ pytest==8.4.0
 psutil>=5.9.0
 GPUtil>=1.4.0
 
-# Deep Learning (installér begge for max fleksibilitet)
-tensorflow>=2.16.1        # Anbefalet: pip install tensorflow (CPU/GPU-version autodetect)
-torch>=2.3.0              # pip install torch (CPU) eller pip install torch --index-url https://download.pytorch.org/whl/cu121 (for CUDA GPU)
+# Deep Learning
+tensorflow>=2.16.1
+torch>=2.3.0
 
 # Visualisering (Pro: Plotly og/eller graf-support)
 plotly==5.22.0
@@ -50,13 +50,17 @@ jupyterlab
 # Logging og avanceret monitoring (Pro)
 loguru==0.7.2
 
+# Experiment tracking & MLOps
+mlflow==2.13.0
+tensorboard==2.16.2
+
+# CLI & utils
+typer==0.12.3
+
 # (Ekstra – tilføj efter behov, kræver ofte ekstra systemlibs på Windows)
 # xgboost==2.0.3
 # lightgbm==4.3.0
 # catboost==1.2.5
-# tqdm==4.66.4           # Progress-bars til loops
-# rich==13.7.1           # Farverig CLI-logging
-# pytest-cov==5.0.0      # Coverage-test
-
-# CLI & utils (hvis du vil lave CLI-scripts mm.)
-typer==0.12.3
+# tqdm==4.66.4
+# rich==13.7.1
+# pytest-cov==5.0.0
