Fix: Skift CI til Python 3.10 for fuld ML/DL support (TensorFlow 2.10.1 virker nu på GitHub Actions). Sikrer at workflow kan installere alle AI-dependencies og bygger/tester uden fejl.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Sæt Python op
       uses: actions/setup-python@v5
       with:
-        python-version: '3.11'
+        python-version: '3.10'   # <-- SKIFTET TIL 3.10 (TensorFlow 2.10.1 support)
 
     - name: Installer pip & afhængigheder
       run: |
