--- a/requirements.txt
+++ b/requirements.txt
@@ -44,6 +44,8 @@ ta==0.11.0
 pandas_ta==0.3.14b0
 xgboost==2.0.3
 lightgbm==4.3.0
+catboost==1.2.5          # <--- NY! Fjern hvis du ikke bruger catboost!
+shap==0.44.1             # <--- NY! SHAP for ML explainability
 optuna==3.6.1
 
 # === Backtesting, Tabeller, Utility, Logging ===
