--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -11,10 +11,14 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: '3.10'  # <-- Kør med Python 3.10 (krav til TensorFlow 2.10.1)
 
       - name: Installer pip & afhængigheder
-        run: pip install -r requirements.txt
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          # Installer torch CPU-version hvis du også tester DL-kode (samme trick som i ci.yml)
+          pip install torch --index-url https://download.pytorch.org/whl/cpu
 
       - name: Kør pytest på tests/
         run: pytest tests/
