--- a/.github/workflows/update_changelog.yml
+++ b/.github/workflows/update_changelog.yml
@@ -20,11 +20,10 @@ jobs:
           persist-credentials: true
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: 3.11
+          python-version: 3.10  # <-- MATCH CI/BUILD PIPELINE
 
-      # Installer pip & afhængigheder
       - name: Installer pip & afhængigheder
         run: |
           python -m pip install --upgrade pip
@@ -64,7 +63,6 @@ jobs:
           git config --global user.name "RhinoTh3Dhino"
           git config --global user.email "reno_123@live.dk"
 
-      # ————— HER ER OPTIMERINGEN! —————
       - name: Commit and push CHANGELOG.md
         if: steps.changelog.outputs.changed == 'true'
         run: |
