Opdateret backup-workflow: Python 3.10, robust artifact-upload, daglig kørsel, kompatibel med TensorFlow 2.10.1 og GitHub Actions best practices. - Sikrer artifact-upload selv ved fejl (if: always()) - Matcher alle CI/Build workflows på Python-version - Klar til Telegram-notifikation, hvis ønsket - Mere robust mod fejl under backup

--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -38,7 +38,7 @@ jobs:
 
       # Upload backup som artifact (husk at backup.py skal gemme til fx backups/)
       - name: Upload backup artifact
-        if: always()
+        if: always()   # Upload artifacts uanset succes eller fejl!
         uses: actions/upload-artifact@v4
         with:
           name: backup
