2️⃣ Anden bølge (kritiske kerne-moduler): Backtest robust kodefix B; genberegn drawdown efter dummy-override og stabil regime-beregning; Tests walk-forward smoke med Matplotlib-stub og pandas.plot no-op samt ekstra dækning for gridsearch, FORCE_DEBUG, strategiskift (voting/regime/ema_rsi/meanrev) og real plot; Metrics evaluate_strategies med robust asof-merge af regime, fejl-håndtering og print; pytest.ini hurtigere og mere stabil default (timeouts, ignore-mapper, standard coverage); samlet test coverage ca. 82%.

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,18 +1,53 @@
 [pytest]
-# Ignorer virtualenv, git, notebooks og cache-mapper
-norecursedirs = .git .venv .venv_tf_gpu .pytest_cache notebooks outputs logs backups mlruns
+minversion = 8.0
 
-# Definer hvilke filer/klasser/funktioner, der tælles som tests
+# Hvor pytest leder efter tests
+testpaths = tests
+
+# Hvilke filer/klasser/funktioner tælles som tests
 python_files = test_*.py *_test.py
 python_classes = Test*
 python_functions = test_*
 
-# Sæt standard testmappe
-testpaths = tests
+# Ignorer støjende mapper (venv, git, cache, artefakter)
+norecursedirs =
+    .git
+    .venv
+    .venv_tf_gpu
+    .pytest_cache
+    htmlcov
+    notebooks
+    outputs
+    logs
+    backups
+    mlruns
 
-# Undgå at samle testdata eller tekstfiler op som test
-addopts = --ignore=test.txt --ignore=README.md --ignore=outputs --ignore=data --ignore=notebooks
+# Standard-flags (så du kan nøjes med 'pytest')
+addopts =
+    # ignorer filer/mappers som ikke er tests
+    --ignore=test.txt
+    --ignore=README.md
+    --ignore=outputs
+    --ignore=data
+    --ignore=notebooks
+    # kvalitet/robusthed
+    -vv
+    --maxfail=1
+    --disable-warnings
+    --timeout=20
+    # coverage (kerne-moduler)
+    --cov=backtest.backtest
+    --cov=backtest.metrics
+    --cov=ensemble.ensemble_predict
+    --cov=utils.telegram_utils
+    --cov-report=term-missing
+    --cov-report=html
+    --cov-fail-under=80
 
-# Vis detaljeret fejludskrift (CLI logging)
+# Undertryk specifikke, kendte advarsler
+filterwarnings =
+    ignore:.*'H' is deprecated and will be removed in a future version.*:FutureWarning
+
+# CLI logging (nyttigt når tests fejler på CI)
 log_cli = true
 log_cli_level = INFO
