Fix CI: install pytest-cov and pytest-timeout for coverage

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,93 +2,110 @@ name: CI
 
 on:
   push:
-    branches: [ "*" ]
+    branches: ["*"]
   pull_request:
-    branches: [ "*" ]
+    branches: ["*"]
   workflow_dispatch:
 
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+    env:
+      MPLBACKEND: Agg            # headless plotting
+      PYTHONUNBUFFERED: "1"
 
     steps:
-    - name: Checkout kode
-      uses: actions/checkout@v4
+      - name: Checkout kode
+        uses: actions/checkout@v4
 
-    - name: Sæt Python op
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.10'   # <-- SKIFTET TIL 3.10 (TensorFlow 2.10.1 support)
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"  # TensorFlow 2.10.x kompatibel
 
-    - name: Installer pip & afhængigheder
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        # === Installér altid torch (CPU-version til CI) ===
-        pip install torch --index-url https://download.pytorch.org/whl/cpu
+      - name: Cache pip
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements*.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
 
-    - name: Kør pytest på tests/
-      run: |
-        pytest tests/
+      - name: Installer pip & afhængigheder
+        run: |
+          python -m pip install -U pip wheel
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
+          # Sikkerhedsnet hvis dev-filen mangler i en branch:
+          pip install pytest-cov pytest-timeout || true
+          # Force CPU-wheel til PyTorch (hvis nødvendigt i tests)
+          pip install --extra-index-url https://download.pytorch.org/whl/cpu 'torch==2.2.2' 'torchvision==0.17.2' 'torchaudio==2.2.2' || true
+          python -V
+          pip -V
+          python -c "import pytest, sys; print('pytest', pytest.__version__)"
 
-    - name: Kør main.py (kun én cyklus i CI)
-      env:
-        CI: "true"
-      run: |
-        python main.py || true  # Kør videre selv ved fejl
+      - name: Kør pytest
+        run: |
+          pytest -vv
+        # Pytest læser coverage/timeout mv. fra pytest.ini (addopts)
 
-    - name: Opret dummy outputfiler hvis de mangler (fail-safe)
-      run: |
-        mkdir -p outputs
-        touch outputs/performance_history.csv
-        touch outputs/balance_trend.png
-        touch BotStatus.md
-        touch CHANGELOG.md
-        if [ ! -s outputs/performance_history.csv ]; then
-          echo "timestamp,Navn,Balance" > outputs/performance_history.csv
-        fi
+      - name: Kør main.py (kun én cyklus i CI)
+        env:
+          CI: "true"
+        run: |
+          python main.py || true  # fortsæt selv hvis main.py fejler i CI
 
-    - name: Tjek at alle centrale outputfiler findes
-      run: |
-        test -f outputs/performance_history.csv
-        test -f outputs/balance_trend.png
-        test -f BotStatus.md
-        test -f CHANGELOG.md
-        echo "✅ Alle vigtige outputfiler findes!"
+      - name: Opret dummy outputfiler hvis de mangler (fail-safe)
+        run: |
+          mkdir -p outputs
+          : > BotStatus.md
+          : > CHANGELOG.md
+          touch outputs/performance_history.csv
+          touch outputs/balance_trend.png
+          if [ ! -s outputs/performance_history.csv ]; then
+            echo "timestamp,Navn,Balance" > outputs/performance_history.csv
+          fi
 
-    - name: Upload artifacts (outputs, tests, logs, grafer)
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: outputs-and-tests
-        path: |
-          outputs/
-          tests/
-          logs/
-          graphs/
-          !**/*.pyc
-          !**/__pycache__/
+      - name: Tjek at alle centrale outputfiler findes
+        run: |
+          test -f outputs/performance_history.csv
+          test -f outputs/balance_trend.png
+          test -f BotStatus.md
+          test -f CHANGELOG.md
+          echo "✅ Alle vigtige outputfiler findes!"
 
-    - name: Check struktur og dependencies
-      run: echo "✅ Struktur og artifacts OK"
+      - name: Upload artifacts (outputs, tests, logs, grafer, coverage)
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: outputs-and-tests
+          path: |
+            outputs/
+            logs/
+            graphs/
+            tests/
+            htmlcov/
+            !**/*.pyc
+            !**/__pycache__/
 
-    - name: Send Telegram notification (CI-status)
-      if: always()
-      env:
-        TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        GITHUB_WORKFLOW: ${{ github.workflow }}
-        GITHUB_RUN_NUMBER: ${{ github.run_number }}
-        GITHUB_JOB: ${{ github.job }}
-        GITHUB_RUN_ATTEMPT: ${{ github.run_attempt }}
-        GITHUB_RUN_ID: ${{ github.run_id }}
-        GITHUB_REPOSITORY: ${{ github.repository }}
-        GITHUB_SHA: ${{ github.sha }}
-        GITHUB_REF_NAME: ${{ github.ref_name }}
-        GITHUB_ACTOR: ${{ github.actor }}
-        GITHUB_EVENT_NAME: ${{ github.event_name }}
-        CI_STATUS: ${{ job.status }}
-      run: |
-        python utils/ci_notify.py
+      - name: Check struktur og dependencies
+        run: echo "✅ Struktur og artifacts OK"
 
-    # BONUS: Linter, coverage osv. kan aktiveres senere...
+      - name: Send Telegram notification (CI-status)
+        if: always()
+        env:
+          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          GITHUB_WORKFLOW: ${{ github.workflow }}
+          GITHUB_RUN_NUMBER: ${{ github.run_number }}
+          GITHUB_JOB: ${{ github.job }}
+          GITHUB_RUN_ATTEMPT: ${{ github.run_attempt }}
+          GITHUB_RUN_ID: ${{ github.run_id }}
+          GITHUB_REPOSITORY: ${{ github.repository }}
+          GITHUB_SHA: ${{ github.sha }}
+          GITHUB_REF_NAME: ${{ github.ref_name }}
+          GITHUB_ACTOR: ${{ github.actor }}
+          GITHUB_EVENT_NAME: ${{ github.event_name }}
+          CI_STATUS: ${{ job.status }}
+        run: |
+          python utils/ci_notify.py || true
