--- a/.github/workflows/update_changelog.yml
+++ b/.github/workflows/update_changelog.yml
@@ -2,16 +2,20 @@ name: Auto Update Changelog
 
 on:
   push:
-    branches: [ ai_bot_dev, ai_bot_test, ai_bot_pro ]  # Kør på alle relevante branches
+    branches: [ ai_bot_dev, ai_bot_test, ai_bot_pro ]
   schedule:
-    - cron: "0 3 * * *"  # Kør hver nat kl. 03:00 UTC
+    - cron: "0 3 * * *"   # hver nat kl. 03:00 UTC
+  workflow_dispatch:
 
 jobs:
   changelog:
-    runs-on: ubuntu-22.04   # BRUG 22.04 for Python 3.10 support
-
+    runs-on: ubuntu-22.04   # Python 3.10 er tilgængelig her
     permissions:
-      contents: write   # Tillad skrivning til repo (nødvendigt for auto-commit/push)
+      contents: write
+
+    env:
+      MPLBACKEND: Agg         # headless Matplotlib
+      PYTHONUNBUFFERED: "1"
 
     steps:
       - name: Checkout repo
@@ -22,12 +26,27 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.10'   # Python 3.10 er tilgængelig på ubuntu-22.04
+          python-version: '3.10'
+
+      - name: Cache pip
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements*.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
 
       - name: Installer pip & afhængigheder
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          python -m pip install -U pip wheel
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
+          # Sikkerhedsnet hvis dev-filen mangler i en branch:
+          pip install pytest-cov pytest-timeout || true
+          # Tving CPU-hjul til PyTorch i Actions
+          pip install --extra-index-url https://download.pytorch.org/whl/cpu 'torch==2.2.2' 'torchvision==0.17.2' 'torchaudio==2.2.2' || true
+          python -V
+          pip -V
 
       - name: Print system info
         run: |
@@ -35,12 +54,12 @@ jobs:
           python --version
           git --version
 
-      # (Valgfrit) Kør tests inden du opdaterer changelog
+      # (Valgfrit) kør tests før changelog-opdatering
       - name: Run tests
         run: |
           if [ -d "tests" ]; then
             echo "Kører tests..."
-            pytest tests/
+            pytest -vv
           else
             echo "Ingen tests-mappe fundet, springer over."
           fi
@@ -65,18 +84,18 @@ jobs:
 
       - name: Commit and push CHANGELOG.md
         if: steps.changelog.outputs.changed == 'true'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git add CHANGELOG.md
           if git diff --cached --quiet; then
             echo "Ingen ændringer at committe."
           else
-            git commit -m "Auto-update CHANGELOG.md"
+            git commit -m Auto-update CHANGELOG.md
             BRANCH=$(git rev-parse --abbrev-ref HEAD)
-            git pull --autostash origin $BRANCH
-            git push origin $BRANCH
+            git pull --autostash --rebase origin "$BRANCH"
+            git push origin "$BRANCH"
           fi
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Send Telegram notification
         if: steps.changelog.outputs.changed == 'true'
