--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     env:
-      MPLBACKEND: Agg          # headless plotting
+      MPLBACKEND: Agg
       PYTHONUNBUFFERED: "1"
       CI: "true"
     steps:
@@ -43,12 +43,25 @@ jobs:
           python -m pip install -U pip wheel
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
-          # Sikkerhedsnet hvis dev-filen mangler i en branch:
+          # Sikkerhedsnet hvis dev-filen mangler:
           pip install pytest pytest-cov pytest-timeout || true
-          # Force CPU-wheel til PyTorch (kun hvis noget kræver det i tests)
+          # Kun hvis noget kræver torch i tests (ignore fejl hvis ikke muligt):
           pip install --extra-index-url https://download.pytorch.org/whl/cpu 'torch==2.2.2' 'torchvision==0.17.2' 'torchaudio==2.2.2' || true
           python -V
           pip -V
+
+      - name: Skriv .env til CI (testmode, ingen rigtige netkald)
+        run: |
+          cat > .env << 'EOF'
+          TELEGRAM_TOKEN=dummy_token
+          TELEGRAM_CHAT_ID=12345
+          TELEGRAM_TESTMODE_ALWAYS_ENABLED=1
+          LOG_DIR=logs
+          # Tving mock i evaluation/claude_eval.py (ingen eksternt API-kald i CI)
+          ANTHROPIC_API_KEY=
+          CLAUDE_MODEL=claude-3-haiku-20240307
+          EOF
+          printf "CI .env content:\n"; sed 's/\(ANTHROPIC_API_KEY=\).*/\1****/' .env
 
       - name: Opret reports-mappe (hvis ikke findes)
         run: mkdir -p reports
@@ -56,7 +69,7 @@ jobs:
       - name: Kør pytest
         run: |
           pytest -q
-        # pytest.ini bør styre coverage/junit (som i dine logs)
+        # pytest.ini styrer coverage/junit/thresholds
 
       - name: Kør main.py (smoke, må ikke vælte CI)
         run: |
@@ -96,9 +109,10 @@ jobs:
             CHANGELOG.md
             !**/*.pyc
             !**/__pycache__/
+          retention-days: 7
 
       - name: Telegram notification (CI-status)
-        if: always()
+        if: ${{ always() }}
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
@@ -114,7 +128,11 @@ jobs:
           GITHUB_EVENT_NAME: ${{ github.event_name }}
           CI_STATUS: ${{ job.status }}
         run: |
-          python utils/ci_notify.py || true
+          if [ -n "${TELEGRAM_TOKEN}" ] && [ -n "${TELEGRAM_CHAT_ID}" ]; then
+            python utils/ci_notify.py || true
+          else
+            echo "Skipping Telegram notify: secrets not configured."
+          fi
 
   nightly-backup-verify:
     if: github.event_name == 'schedule'
@@ -135,7 +153,6 @@ jobs:
         run: |
           python -m pip install -U pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          # Sikre pytest-miljø hvis backup værktøjet importerer test-afhængigheder
           pip install pytest || true
 
       - name: Opret dummy data + ZIP-backup
