--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,8 @@ tensorboard==2.15.1
 # FEATURE ENG / TA
 # =========================
 ta==0.11.0
-pandas_ta==0.3.14b0
+pandas-ta==0.3.14b0
+
 
 # =========================
 # PLOTTING
